--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,32 @@
+h1 {
+  color: #bdc1c6;
+  display: block;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 0;
+}
+body {
+  font-family: "Fira Sans", sans-serif;
+}
+.weather-wrapper {
+  max-width: 600 px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #9aa0a5;
+  border-radius: 5px;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
 
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: rgb(154, 160, 166);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+}
