--- a/src/style.css
+++ b/src/style.css
@@ -9,13 +9,7 @@ h1 {
 body {
   font-family: "Fira Sans", sans-serif;
 }
-.weather-wrapper {
-  max-width: 600 px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid #9aa0a5;
-  border-radius: 5px;
-}
+
 ul {
   margin: 0;
   padding: 0;
@@ -29,4 +23,33 @@ li {
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
+}
+.weather-wrapper {
+  max-width: 600 px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 20px;
+  border: 1px solid #9aa0a5;
+  border-radius: 5px;
+}
+.overview {
+  margin-bottom: 20px;
+}
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+.weather-temperature strong {
+  color: #212121;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 1;
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -23px;
 }
