--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@ li {
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
+  text-transform: capitalize;
 }
 .weather-wrapper {
   max-width: 600 px;
