--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,8 @@ li {
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
+}
+li:first-letter {
   text-transform: capitalize;
 }
 .weather-wrapper {
