--- a/src/style.css
+++ b/src/style.css
@@ -24,8 +24,15 @@ li {
   color: #fff;
   font-size: 16px;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 30px;
 }
+hr {
+  color: #fafafa;
+}
+i {
+  color: #fafafa;
+}
+
 li:first-letter {
   text-transform: capitalize;
 }
@@ -43,9 +50,7 @@ li:first-letter {
   border-radius: 5px;
   background: rgb(154, 160, 166, 0.9);
 }
-hr {
-  color: #fafafa;
-}
+
 .weather-forecast {
   border-radius: 5px;
   background: rgb(218, 216, 227, 0.4);
@@ -97,4 +102,11 @@ hr {
 }
 .credits {
   color: #fafafa;
+}
+#description {
+  color: #212121;
+}
+#current-button {
+  border: solid;
+  border-color: #6c757d;
 }
